--- a/section-05.adoc
+++ b/section-05.adoc
@@ -35,7 +35,7 @@ known as Player "A"; the other as Player "B.”'
 ===== A. Naval Convoy Schedule Phase
 
 The Axis Player plans what specific cargoes the ships will carry and their
-routes. See <<32_0>> or Section <<56_0>>. The Axis Player plans for the arrival
+routes. See <<32_0>> or <<56_0>>. The Axis Player plans for the arrival
 of future Replacements from the Axis Replacement Points Pool. Likewise, the
 Commonwealth Player consults the Commonwealth Production Table and determines
 how many Replacement Points he will receive two turns henc and plans for their
@@ -43,8 +43,9 @@ arrival. .
 
 ===== B. Tactical Shipping Phase
 
-Both Players plan the transport of cargo between African ports. Note: The Axis
-Coastal Ships are represented in the game by counters. Allied coastal shipping
+Both Players plan the transport of cargo between African ports. 
+
+*Note*: The Axis Coastal Ships are represented in the game by counters. Allied coastal shipping
 is not represented by counters and is limited only by the port capacities.
 
 ==== III. FIRST OPERATIONS STAGE 
@@ -77,7 +78,7 @@ Operations Stage (Exception: Reaction).
 .. Training Completion Step: Units and Replacement Points
 completing a level of Training are noted and the effects in Morale applied. 
 .. Any units beginning or continuing Training are noted. They may not move
-voluntarily in the remainder of the Operations Stage (Exception: Reaction). .
+voluntarily in the remainder of the Operations Stage (Exception: Reaction).
 
 ===== D. Naval Convoy Arrival Phase
 
@@ -113,14 +114,14 @@ permitted and Player "B" wishes to do so.
 All vehicles and motorized units of both sides check for Breakdown (<<2_10>>).
 Broken down vehicles are indicated by a marker. 
 
-3. Combat Segment: (Combat isresolved as follows see <<11_0>> through <<15_0>>).
+3. Combat Segment: (Combat is resolved as follows see <<11_0>> through <<15_0>>).
 
 .. Position Determination Step: Both Players determine the "position" of all Gun-and Armor-class units.
 
 .. Barrage Step: Both Players secretly plot and then execute any Barrages. 
 
 .. Retreat Before Assault Step: Player "B”' may Retreat Before Assault any of his
-units permitted to doso. 
+units permitted to do so. 
 
 .. Force Assignment Step: Both Players secretly
 assign TOE Strength Points to Anti-Armor or Close Assault. Player "A"
@@ -172,6 +173,6 @@ Both Players repeat ail facets of the First Operations Stage.
 ==== VI. END OF GAME-TURN
 
 You have now completed one Game-Turn, a full week of the real campaign. Take a
-breather, havea beer and a sandwich, contact your loved ones to let them know
+breather, have a beer and a sandwich, contact your loved ones to let them know
 you're still alive, and return for another Game-Turn.
 
