--- a/section-10.adoc
+++ b/section-10.adoc
@@ -7,16 +7,16 @@ The six hexagons immediately surrounding a hex constitute the Zone of Control
 (ZOC) of any unit in that hex. However, only certain types and sizes of units
 exert ZOC's. Hexes upon which a unit exerts a ZOC are called controlled hexes,
 and these inhibit movement of Enemy units. All units must cease movement upon
-entering an Enemycontrolled hex.
+entering an Enemy controlled hex.
 
-[#10_1]*[10.1]*
+[#10_1]
 === WHICH UNITS EXERT A ZONE OF CONTROL
 
 [#10_11]*[10.11]* All combat units above battalionequivalent (i.e. with more
 than one Stacking Point) exert a Zone of Control. In addition, if there is more
 than one Stacking Point in a hex even if no larger-than-battalion unit is
 present, the units in that hex also exert a ZOC. Truck Convoys never exert a
-ZOC, nor do HQ units that have fo attached combat units.
+ZOC, nor do HQ units that have no attached combat units.
 
 [#10_12]*[10.12]* Aircraft, Squadron Ground Support units, and warships exert
 no ZOC.
@@ -33,11 +33,11 @@ organizational size of the unit. For this purpose, anti-tank units are always
 presumed to be Up Front (see Case <<12_1>>).
 
 [#10_16]*[10.16]* The non-Phasing Player must inform the Phasing Player whether
-or nota particular unit exerts a Zone of Control if that unit could exert a Zone
+or not a particular unit exerts a Zone of Control if that unit could exert a Zone
 into a hex and a unit belonging to the Phasing Player either begins a Movement
 Segment in that hex or is moved into that hex.
 
-[#10_2]*[10.2]*
+[#10_2]
 === EFFECTS OF ZONES OF CONTROL
 
 [#10_21]*[10.21]* ZOC's extend into all hexes on the gamemap, with the following exceptions:
@@ -60,7 +60,7 @@ ZOC. However, see Section <<10_3>>.
 [#10_23]*[10.23]* A unit must cease movement upon entering an
 Enemy-controlled hex. The moving unit may not exit that Enemy-controlled hex
 until the next Movement Segment (within that Operations Stage or in the next
-Operations Stage). If a unit begins a Movement Segment in an Enemycontrolled hex
+Operations Stage). If a unit begins a Movement Segment in an Enemy controlled hex
 it may leave that ZOC, at a cost in CP's to Break Off (<<8_7>>). Units may not be
 retreated into a hex in an Enemy ZOC (exception: see Case <<10_26>>).
 
@@ -73,10 +73,10 @@ After Combat rule in CNA; this rule is simply an exception to the
 no-movementinto-Enemy-ZOC's rule).
 
 [#10_25]*[10.25]* Friendly units may move through hexes adjacent to an Enemy
-combat unit that are not controlled by that Enemy unit's ZOC. (See Cases 10.1
+combat unit that are not controlled by that Enemy unit's ZOC. (See Cases <<10_1>>
 and <<10_21>>).
 
-[#18_26]*[18.26]* For al/ movement purposes, the presence of a Friendly combat
+[#10_26]*[10.26]* For al/ movement purposes, the presence of a Friendly combat
 unit in a hex negates the effect of an Enemy ZOC. Friendly ZOC's never affect
 Friendly units.
 
@@ -87,14 +87,14 @@ same hex that hex is considered to be controlled by both Players.
 [#10_28]*[10.28]* There is no additional effect when more than one unit exerts a
 ZOC into a given hex.
 
-[#20_29]*[20.29]* Truck Convoys may not enter an Enemy ZOC unless such hex is
+[#10_29]*[10.29]* Truck Convoys may not enter an Enemy ZOC unless such hex is
 already occupied by a Friendly combat unit. Furthermore, no noncombat unit
 (i.e., bare HQ's, Engineers, Air Squadron Ground Support Units, etc.) may ever
 enter an unoccupied hex in an enemy ZOC voluntarily. If such a unit is alone in
 an Enemy ZOC at any time during the Enemy Movement/Combat Phase and it has no
 strength of any type, such Friendly non-combat unit is Captured.
 
-[#10_3]*[10.3]*
+[#10_3]
 === ZOC COMBAT REQUIREMENTS (HOLDING OFF)
 
 [#10_31]*[10.31]* All hexes containing Enemy units exerting Zones of Control on
@@ -111,23 +111,23 @@ Enemy ZOC consist solely of Artillery, anti-tank, or anti-aircraft (or
 non-combat) units, or there are other type units but they are pinned (<<12_42>>),
 these units do not have to attack as in Case <<10_31>>.
 
-[#20_33]*[20.33]* Players may use a special "Holding Off" Artillery Barrage to
-satisfy the requirements of 10.31. (For experienced gamers, this is a
+[#10_33]*[10.33]* Players may use a special "Holding Off" Artillery Barrage to
+satisfy the requirements of <<10_31>>. (For experienced gamers, this is a
 sophisticated version of "Soaking Off".) Thus a Friendly Division that is in the
 ZOC of Enemy units from two different hexes may choose to Hold Off one of those
 hexes and Close Assault the other.
 
-[#16_34]*[16.34]* To perform a Holding Off Barrage, a Friendly Player must
+[#10_34]*[10.34]* To perform a Holding Off Barrage, a Friendly Player must
 Barrage an Enemy hex with at least as many Actual Barrage Strength Points (i.e.,
 Barrage Rating x TOE Strength + 10) as there are individual non-Gun (i.e.,
 Artillery, AntiTank or AA units) Enemy battalion-equivalent combat units (units
-with /ess than 1 Stacking Point and Gun units do not count) in that hex.
+with less than 1 Stacking Point and Gun units do not count) in that hex.
 Remember, an Enemy Division may consist of, say, eleven battalion-equivalent
 units, so the Friendly Barraging Player would need 11 Actual Barrage Points to
 perform a Holding Off action against such a Division.
 
 [#10_35]*[10.35]* If, according to the precepts of <<10_34>>, a Friendly Phasing
-Player can not Hold Off Enemy units ina given hex he must Close Assault
+Player can not Hold Off Enemy units in a given hex, he must Close Assault
 that hex.  (Remember Case <<10_32>>). There is no minimum point requirement for
 a Close Assault.
 
